<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/ychcjm_bg"
    android:layout_width="360dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="600dp">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/touxiang"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:src="@drawable/default_logo"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/idname"
            android:layout_width="116dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/touxiang"
            android:layout_toEndOf="@+id/touxiang"
            android:gravity="center"
            android:text="@string/neirong1"
            android:textColor="#ffff00"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/menu_sz"
            android:layout_width="70dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="41dp"
            android:layout_marginTop="31dp"
            android:background="@drawable/shezhi" />

        <Button
            android:id="@+id/xin"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/wdsc"
            android:layout_alignEnd="@+id/touxiang"
            android:background="@drawable/xin" />

        <Button
            android:id="@+id/ai"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_above="@+id/wdsc"
            android:layout_alignEnd="@+id/touxiang"
            android:layout_marginBottom="-215dp"
            android:background="@drawable/ai" />

        <Button
            android:id="@+id/xinxi"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/touxiang"
            android:layout_centerVertical="true"
            android:background="@drawable/xinxi" />

        <Button
            android:id="@+id/sl_wdfs"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/wdfs"
            android:layout_alignEnd="@+id/touxiang"
            android:background="@drawable/sl_wdfs" />

        <Button
            android:id="@+id/wdtz"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_below="@+id/wdsc"
            android:layout_centerHorizontal="true"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/wdtz"
            android:textColor="#ffff00"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/wdfs"
            android:layout_width="160dp"
            android:layout_height="50dp"

            android:layout_below="@+id/wdtz"
            android:layout_centerHorizontal="true"
            android:background="#00000000"
            android:gravity="center"
            android:text="我的粉丝"
            android:textColor="#ffff00"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/wdgz"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_above="@+id/wdsc"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-215dp"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/wdgz"
            android:textColor="#ffff00"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/wdsc"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="215dp"
            android:background="#00000000"
            android:gravity="center"
            android:text="@string/wdsc"
            android:textColor="#ffff00"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>