<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/dlhjm_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/dlhjm_geren"
        android:layout_width="113dp"
        android:layout_height="39dp"
        android:layout_alignTop="@+id/dlhjm_guanfang"
        android:layout_marginLeft="20dp"
        android:background="@drawable/dlhjm_buttoncolor1"
        android:text="便签"
        android:textColor="@drawable/dlhjm_buttontextcolor"
        android:textSize="17sp"
        android:textStyle="bold" /> 

    <Button
        android:id="@+id/dlhjm_guanfang"
        android:layout_width="117dp"
        android:layout_height="39dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/dlhjm_buttoncolor1"
        android:text="通知"
        android:textColor="@drawable/dlhjm_buttontextcolor"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/dlhjm_button4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/dlhjm_shizi" />


    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/dlhjm_touxiang1"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:src="@drawable/default_logo"
        app:riv_oval="true" />


    <TextView
        android:id="@+id/dlhjm_schoolname"
        android:layout_width="140dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:background="@drawable/dlhjm_pschoolbg"
        android:gravity="center"
        android:padding="1dp"
        android:text="@string/schoolname"
        android:textColor="#ffff00"
        android:textSize="25sp" />
    /**大学名字*/

    /**文本内容*/


    <Button
        android:id="@+id/dlhjm_remen"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignEnd="@+id/dlhjm_schoolname"
        android:layout_alignTop="@+id/dlhjm_guanzhu"
        android:background="#00000000"
        android:text="@string/remenq1"
        android:textColor="#ffff00"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/dlhjm_guanzhu"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dlhjm_touxiang1"
        android:layout_marginStart="104dp"
        android:layout_marginTop="6dp"
        android:background="#00000000"
        android:text="@string/guanzhu"
        android:textColor="#ffff00"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button7"
        android:layout_width="40dp"
        android:layout_height="3dp"
        android:layout_below="@+id/dlhjm_touxiang1"
        android:layout_toEndOf="@+id/dlhjm_geren"
        android:background="#ffff00" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="444dp"
        android:layout_above="@+id/dlhjm_button4"
        android:layout_alignParentStart="true">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="497dp"
            android:visibility="visible">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp">

            </android.support.v7.widget.RecyclerView>

        </android.support.v4.widget.SwipeRefreshLayout>
    </FrameLayout>


</RelativeLayout>